# shai

./: .gitignore  Cargo.toml  README.md  build.rs  install.ps1  install.sh
docs/: GC_GUIDE.md  INDEX.md  OPTIMIZATION_INSIGHTS.md  QUICK_REFERENCE.md  SCHEMA.md  SHAI_ARCHITECTURE.txt  TROUBLESHOOTING.md
queries/: rust.scm
src/: discovery.rs  main.rs  search_output.rs  status_output.rs  verbalizer.rs
src/adapters/: gemini.rs  generic.rs  mod.rs  tests.rs
src/agents/: claude.rs  cline.rs  copilot.rs  crush.rs  droid.rs  gemini.rs  generic.rs  goose.rs  junie.rs  kilo.rs  mod.rs  opencode.rs
src/cli_commands/: adapters.rs  classify.rs  guard.rs  maintenance.rs  memory.rs  mod.rs  reports.rs  run.rs  shared.rs  timeline.rs
src/context/: mod.rs  reports.rs  types.rs
src/semantic/: common.rs  cpp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  markdown.rs  mod.rs  python.rs  ruby.rs  rust.rs  swift.rs  tests.rs  typescript.rs
src/storage/: analytics.rs  blobs.rs  content_store.rs  export_import.rs  helpers.rs  history.rs  memory.rs  mod.rs  schema.rs  search.rs  sessions.rs  tests.rs  types.rs
tests/: run_flow.rs
